# Java-OO-Visualization

./: .gitignore  README.md
.github/workflows/: build-wasm.yml  static.yml
backend/: Cargo.toml  flake.nix
backend/examples/: Animal.java  Dog.java  Main.java  Trainable.java  Vehicle.java
backend/src/: analyzer.rs  api.rs  compare.rs  execution_analyzer.rs  execution_graph_generator.rs  graph_generator.rs  http_api.rs  integration_tests.rs  lib.rs  mistake.rs  model.rs  parser.rs  repr.rs  tests.rs  visualizer.rs
backend/src/execution_flow/: evaluator.rs  execution_analyzer.rs  execution_graph_generator.rs  mod.rs
backend/src/no_flow/: graph_generator.rs  mod.rs
frontend/: .gitignore  diagram-creator.js  index.html  main.js  package-lock.json  package.json
frontend/css/: stylesheet.css
frontend/javascript/: diagram-comparer.js  diagram-creator.js  utils.js  visualizer.js
scripts/: build-wasm.sh  dev.sh  serve.sh
wasm/: backend.js  backend.wasm
