[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# pinned to resolve https://github.com/tree-sitter/tree-sitter/issues/4105
tree-sitter = { version = "0.23", default-features = false }
tree-sitter-java = "0.23.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen_steps"
test = false
bench = false
