[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
server = ["dep:tokio", "dep:axum", "dep:tower-http"]

[dependencies]
# pinned to resolve https://github.com/tree-sitter/tree-sitter/issues/4105
tree-sitter = { version = "0.23", default-features = false }
tree-sitter-java = "0.23.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
wasm-bindgen = "0.2"
regex = "1"
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "gen_steps"
test = false
bench = false

[[bin]]
name = "gen_graph"
test = false
bench = false

[[bin]]
name = "server"
required-features = ["server"]
